--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 
 label {
     display: block;
-    font-size: 0.9em;
+    font-size: 20px;
     color: #555555;
     margin-bottom: 5px;
 }
@@ -86,6 +86,8 @@ label {
     width: 100%;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 
 .botons:hover {
@@ -124,4 +126,8 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+.link{
+    margin-top: 15px;
+    margin-bottom: 7px;
 }
