--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ label {
 
 /* Botón de registro */
 .botons {
-    background-color: #007bff; /* Azul brillante */
+    background-color: #032549; /* Azul brillante */
     color: white;
     font-size: 1em;
     padding: 10px;
