--- a/style.css
+++ b/style.css
@@ -10,13 +10,18 @@ body {
     height: 100vh;
     flex-direction: column;  /* Esto coloca los elementos en columna */
     text-align: center;  /* Centra el contenido */
+    background-image: url(papel-arrugado-textura-dorada-scaled.jpg);
+    background-size: cover; /* Ajusta la imagen para cubrir toda la página */
+    background-position: center; /* Centra la imagen */
+    background-attachment: fixed; /* Asegura que el fondo no se desplace al hacer scroll */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
 }
 
 /* Franjas en la parte superior, fuera del formulario */
 .franja {
     width: 100%;
     height: 40px; /* Altura de las franjas */
-    background: rgb(83, 0, 0); /* Rojo y dorado */
+    background: rgb(22, 16, 77); /* Rojo y dorado */
     position: absolute;
     top: 0;
     left: 0;
@@ -130,4 +135,25 @@ a:hover {
 .link{
     margin-top: 15px;
     margin-bottom: 7px;
+}
+#cargando {
+    display: none;
+    text-align: center;
+    font-size: 18px;
+    color: #333;
+    margin-top: 20px;
+}
+.loading {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #3498db;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
