--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ body {
     background-repeat: no-repeat; /* Evita que la imagen se repita */
 }
 
-/* Franjas en la parte superior, fuera del formulario */
+* Franjas en la parte superior, fuera del formulario */
 .franja {
     width: 100%;
-    height: 57px; /* Altura de las franjas */
+    height: 76px; /* Altura de las franjas */
     background: rgb(22, 16, 77); /* Rojo y dorado */
     position: absolute;
     top: 0;
@@ -28,12 +28,17 @@ body {
 }
 .franja2{
     width: 100%;
-    height: 57px; /* Altura de las franjas */
+    height: 40px; /* Altura de las franjas */
     background: rgb(128, 115, 6); /* Rojo y dorado */
     position: absolute;
-    top: 57px;
+    top: 76px;
     left: 0;
+    
 }
+.logo {
+    max-height: 76px; /* Ajusta el tamaño máximo del logo */
+    margin: 0 100px; /* Espaciado entre los logos */
+  }
 /* Contenedor principal */
 .form-register {
     background-color: #ffffff; /* Fondo blanco */
