--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     background-repeat: no-repeat; /* Evita que la imagen se repita */
 }
 
-* Franjas en la parte superior, fuera del formulario */
+/* Franjas en la parte superior, fuera del formulario */
 .franja {
     width: 100%;
     height: 76px; /* Altura de las franjas */
@@ -65,7 +65,7 @@ body {
 
 label {
     display: block;
-    font-size: 20px;
+    font-size: 27px;
     color: #555555;
     margin-bottom: 5px;
 }
